# acore

./: .gitignore  README.md  note.md
acore_fs/: Cargo.toml
acore_fs/src/: afs.rs  bitmap.rs  block_cache.rs  block_dev.rs  block_manager.rs  layout.rs  lib.rs  vfs.rs
acore_fs_fuse/: Cargo.toml
acore_fs_fuse/src/: main.rs
buddy/: Cargo.toml
buddy/src/: buddy_allocator.rs  buddy_list.rs  lib.rs
kernel/: Cargo.toml  Makefile
kernel/src/: batch.rs  config.rs  entry.asm  link_app.S  linker.ld  main.rs
kernel/src/console/: logging.rs  mmio.rs  mod.rs  sbi.rs  stdin.rs  stdout.rs
kernel/src/drivers/: mod.rs
kernel/src/fs/: kernel_file.rs  mod.rs  pipe.rs  stdio.rs
kernel/src/mm/: addr.rs  addr_space.rs  frame_allocator.rs  heap.rs  loader.rs  mem_manager.rs  mod.rs  page_table.rs
kernel/src/mm/buddy/: buddy_allocator.rs  buddy_list.rs  mod.rs
kernel/src/proc/: action.rs  ctx.rs  manager.rs  mod.rs  pcb.rs  pid.rs  proc_ctx.rs  proc_manager.rs  resource.rs  scheduler.rs  signal.rs  stack.rs  switch.rs  thread.rs
kernel/src/sync/: condvar.rs  mod.rs  mutex.rs
kernel/src/syscall/: fs.rs  mod.rs  proc.rs  sync.rs  thread.rs
kernel/src/timer/: mod.rs  mtime_trap.S
kernel/src/trap/: context.rs  mod.rs  trampoline.S
kernel/src/utils/: mod.rs
user/: Cargo.toml  Makefile
user/src/: console.rs  lang_items.rs  lib.rs  logging.rs  syscall.rs
user/src/all_bin/: forkexec.rs  hello.rs
