#cargo-features = ["edition2024"]

[package]
name = "user_lib"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
buddy = { path = "../buddy" }
#buddy_system_allocator = "0.6"
log = "0.4"
bitflags = "1.2.1"

[profile.release]
debug = true

